# a2a-rs

./: Cargo.toml  README.md  justfile  release-plz.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  coverage.yml  release-rust.yml
a2a/: CHANGELOG.md  Cargo.toml
a2a-client/: CHANGELOG.md  Cargo.toml
a2a-client/src/: agent_card.rs  client.rs  factory.rs  jsonrpc.rs  lib.rs  middleware.rs  push_config_compat.rs  rest.rs  transport.rs
a2a-grpc/: CHANGELOG.md  Cargo.toml  README.md
a2a-grpc/src/: client.rs  errors.rs  server.rs
a2a-grpc/tests/: e2e.rs
a2a-pb/: CHANGELOG.md  Cargo.toml  README.md  build.rs
a2a-pb/src/: lib.rs  pbconv.rs  protojson_conv.rs
a2a-pb/tests/: protojson.rs
a2a-server/: CHANGELOG.md  Cargo.toml
a2a-server/src/: handler.rs  jsonrpc.rs  lib.rs  middleware.rs  push_config_compat.rs  rest.rs  sse.rs  tls.rs
a2a-server/src/task_store/: inmemory.rs
a2a-slimrpc/: CHANGELOG.md  Cargo.toml  README.md
a2a-slimrpc/src/: client.rs  common.rs  errors.rs  lib.rs  server.rs
a2a-slimrpc/tests/: e2e.rs
a2a-stdio/: Cargo.toml  README.md
a2a-stdio/src/: client.rs  errors.rs  framing.rs  handshake.rs  lib.rs  server.rs
a2a-stdio/tests/: e2e.rs  spawned.rs
a2a/src/: agent_card.rs  errors.rs  jsonrpc.rs  lib.rs  types.rs
a2acli/: CHANGELOG.md  Cargo.toml  README.md
a2acli/src/: lib.rs  main.rs
a2acli/tests/: e2e.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs
examples/helloworld/tests/: transports_e2e.rs
