[workspace]
members = [
    "a2a",
    "a2a-client",
    "a2a-server",
    "a2a-pb",
    "a2a-grpc",
    "a2a-slimrpc",
    "a2acli",
    "examples/helloworld",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/a2aproject/a2a-rs"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
a2a = { package = "a2a-lf", path = "a2a", version = "0.2.4" }
a2a-client = { package = "a2a-client-lf", path = "a2a-client", version = "0.1.14" }
a2a-server = { package = "a2a-server-lf", path = "a2a-server", version = "0.2.7" }
a2a-pb = { package = "a2a-pb", path = "a2a-pb", version = "0.1.6" }
a2a-grpc = { package = "a2a-grpc", path = "a2a-grpc", version = "0.1.12" }
a2a-slimrpc = { package = "a2a-slimrpc", path = "a2a-slimrpc", version = "0.1.9" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pbjson = "0.7"
pbjson-types = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# HTTP
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2", "system-proxy"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"
axum-server = "0.8"
rustls = "0.23"

# gRPC + protobuf
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"
pbjson-build = "0.7"
protoc-bin-vendored = "3"
slim_bindings = { package = "agntcy-slim-bindings", version = "1.3.0" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
semver = "1"
tracing = "0.1"
auto_impl = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
