[package]
name = "agntcy-a2a-client"
version = "0.1.7"
description = "A2A v1 async client with protocol binding factory"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "a2a_client"

[dependencies]
a2a = { workspace = true }
a2a-pb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
bytes = "1"
tracing = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
pin-project-lite = { workspace = true }
