[package]
name = "agntcy-a2a-grpc"
version = "0.1.10"
description = "A2A v1 gRPC protocol binding for client and server"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "a2a_grpc"

[dependencies]
a2a = { workspace = true }
a2a-client = { workspace = true }
a2a-server = { workspace = true }
a2a-pb = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
