[package]
name = "agntcy-a2a-pb"
version = "0.1.5"
description = "A2A v1 protobuf-generated types and conversion layer"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "a2a_pb"

[dependencies]
a2a = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
tonic = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
pbjson-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
tonic-build = { workspace = true }
