[package]
name = "a2a"
version = "0.2.0"
description = "A2A v1 protocol types and core definitions"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
