[package]
name = "agntcy-a2a"
version = "0.2.2"
description = "A2A v1 protocol types and core definitions"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "a2a"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
